# ROS_RIA_001_ObstacleAvoidance

./: CMakeLists.txt  README.md  package.xml
launch/: obstacle_avoidance.launch
src/: obstacle_avoidance.py
